--- a/app.yaml
+++ b/app.yaml
@@ -6,12 +6,9 @@ env: flex
 # for production use. For more information, see:
 # https://cloud.google.com/appengine/docs/flexible/nodejs/configuring-your-app-with-app-yaml
 
-
-  # [START handlers]
-handlers:
-  - url: /
-    static_files: build/index.html
-    upload: build/index.html
-  - url: /
-    static_dir: build
-# [END handlers]
+manual_scaling:
+  instances: 1
+resources:
+  cpu: 1
+  memory_gb: 0.5
+  disk_size_gb: 10
